Revert "fix squishing of carousel images"
This reverts commit c4bdf082244ca1ad4e54226b6ac34d056e50df0f.

--- a/walkr/static/css/styles.css
+++ b/walkr/static/css/styles.css
@@ -1,3 +1,7 @@
+.h-55{
+    height: 55vh!important;
+}
+
 .carousel-control-next-icon, .carousel-control-prev-icon {
     filter: invert(1);
 }
